--- a/backend/src/Cnab.Api.Application/Cnab.Api.Application.csproj
+++ b/backend/src/Cnab.Api.Application/Cnab.Api.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Cnab.Api.Contracts\Cnab.Api.Contracts.csproj" />
   </ItemGroup>
 
