--- a/backend/src/Cnab.Api.Cache/Cnab.Api.Cache.csproj
+++ b/backend/src/Cnab.Api.Cache/Cnab.Api.Cache.csproj
@@ -9,7 +9,7 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Cnab.Api.Domain\Cnab.Api.Domain.csproj" />
+    <ProjectReference Include="..\Cnab.Api.Domain\Cnab.Api.Domain.csproj" />
   </ItemGroup>
 
 </Project>
