--- a/backend/src/Cnab.Api.Contracts/Cnab.Api.Contracts.csproj
+++ b/backend/src/Cnab.Api.Contracts/Cnab.Api.Contracts.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,13 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
     <Folder Include="Validators\" />
-    <Folder Include="Queries\" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Cnab.Api.Domain\Cnab.Api.Domain.csproj" />
+    <ProjectReference Include="..\Cnab.Api.Domain\Cnab.Api.Domain.csproj" />
   </ItemGroup>
 
 </Project>
