docker-compsoe finalizado

--- a/backend/src/Cnab.Api.WebApi/appsettings.Production.json
+++ b/backend/src/Cnab.Api.WebApi/appsettings.Production.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "CnabContext": "Host=186.224.37.80;Port=54320;Database=project_sign;Username=sa;Password=P@ssw0rd123;MaxPoolSize=100"
-  }
+    "CnabContext": "Host=db;Port=5432;Database=desafio_dev;Username=desafio_dev;Password=desafio_dev;MaxPoolSize=100"
+  },
+  "Redis": "redis:6379,abortConnect=false,connectTimeout=300,responseTimeout=300"
 }
