--- a/backend/src/Cnab.Api.Logs/Cnab.Api.Logs.csproj
+++ b/backend/src/Cnab.Api.Logs/Cnab.Api.Logs.csproj
@@ -5,12 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyModel" Version="7.0.0" />
 		<PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 	</ItemGroup>
-	<ItemGroup>
-	  <ProjectReference Include="..\..\Cnab.Api.Domain\Cnab.Api.Domain.csproj" />
-	</ItemGroup>
-
 </Project>
