--- a/backend/src/Cnab.Api.Services/Cnab.Api.Services.csproj
+++ b/backend/src/Cnab.Api.Services/Cnab.Api.Services.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Cnab.Api.Domain\Cnab.Api.Domain.csproj" />
+    <ProjectReference Include="..\Cnab.Api.Domain\Cnab.Api.Domain.csproj" />
   </ItemGroup>
 
 </Project>
